--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -1,18 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.timboat.coolapp.SplashScreen">
+    android:layout_gravity="center"
+    android:background="@drawable/white_background"
+    tools:context="com.timboat.coolapp.SignUp">
 
-    <TextView
+    <!--> App logo Gif <!-->
+    <com.felipecsl.gifimageview.library.GifImageView
+        android:id="@+id/gif"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        android:maxHeight="325dp"
+        android:layout_marginTop="65dp"
+        android:layout_marginLeft="36dp"/>
+    <!--> App logo <!-->
+    <ImageView
+        android:id="@+id/last_frame"
+        android:src="@drawable/logo_final_frame"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:maxHeight="200dp"
+        android:layout_marginTop="190dp"
+        android:layout_marginLeft="85dp"
+        android:visibility="invisible"
+        android:transitionName="app_logo"/>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
