--- a/app/src/main/res/layout/page_fragment_layout.xml
+++ b/app/src/main/res/layout/page_fragment_layout.xml
@@ -1,11 +1,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.timboat.coolapp.PageFragment"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/drawer">
 
     <!-- TODO: Update blank fragment layout -->
+
     <TextView
         android:id="@+id/wish_list_title"
         android:layout_width="wrap_content"
@@ -22,23 +25,24 @@
         android:textSize="40dp"
         android:text="WishList"
         android:layout_marginTop="30dp"
-        android:visibility="visible"/>
+        android:visibility="invisible"/>
 
     <ListView
         android:id="@+id/item_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="80dp"
-        android:visibility="visible"/>
+        android:visibility="invisible"/>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/bubble_element1"
+        android:id="@+id/bubble_open_start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="525dp"
-        android:layout_marginLeft="355dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="335dp"
+        android:src="@drawable/ic_action_plus"
         android:elevation="6dp"
-        app:backgroundTint="@color/option2"
+        app:backgroundTint="@color/colorAccent"
         app:pressedTranslationZ="12dp"
         android:visibility="invisible"/>
 
@@ -46,22 +50,33 @@
         android:id="@+id/bubble_element2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="575dp"
-        android:layout_marginLeft="355dp"
+        android:layout_marginTop="220dp"
+        android:layout_marginLeft="335dp"
+        android:elevation="6dp"
+        app:backgroundTint="@color/option2"
+        app:pressedTranslationZ="12dp"
+        android:visibility="invisible"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/bubble_element1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="135dp"
+        android:layout_marginLeft="335dp"
         android:elevation="6dp"
         app:backgroundTint="@color/option1"
         app:pressedTranslationZ="12dp"
         android:visibility="invisible"/>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/bubble_open_start"
+        android:id="@+id/bubble_element3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="625dp"
-        android:layout_marginLeft="355dp"
-        android:src="@drawable/ic_action_plus"
+        android:layout_marginTop="305dp"
+        android:layout_marginLeft="335dp"
         android:elevation="6dp"
-        app:backgroundTint="@color/colorAccent"
-        app:pressedTranslationZ="12dp"/>
+        app:backgroundTint="@color/option2"
+        app:pressedTranslationZ="12dp"
+        android:visibility="invisible" />
 
 </RelativeLayout>
