--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -16,18 +16,30 @@
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"
         android:maxHeight="325dp"
-        android:layout_marginTop="65dp"
-        android:layout_marginLeft="36dp"/>
+        android:layout_marginTop="73dp"
+        android:layout_marginLeft="43dp"/>
     <!--> App logo <!-->
     <ImageView
         android:id="@+id/last_frame"
-        android:src="@drawable/logo_final_frame"
+        android:src="@drawable/logo_last_frame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        android:maxHeight="200dp"
-        android:layout_marginTop="190dp"
-        android:layout_marginLeft="85dp"
+        android:maxHeight="175dp"
+        android:layout_marginTop="215dp"
+        android:layout_marginLeft="100dp"
+        android:visibility="invisible"
+        android:transitionName="app_logo"/>
+
+    <ImageView
+        android:id="@+id/start_frame"
+        android:src="@drawable/logo_starting_frame"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:maxHeight="175dp"
+        android:layout_marginTop="215dp"
+        android:layout_marginLeft="100dp"
         android:visibility="invisible"
         android:transitionName="app_logo"/>
 
