--- a/app/src/main/res/layout/activity_item_adder.xml
+++ b/app/src/main/res/layout/activity_item_adder.xml
@@ -18,15 +18,15 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="100dp"
         android:orientation="horizontal"
-        android:layout_marginTop="15dp">
+        android:layout_marginTop="25dp"
+        android:gravity="center">
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/bubble_clothes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="23dp"
             android:elevation="6dp"
             app:backgroundTint="@color/colorAccent"
             app:pressedTranslationZ="12dp"
@@ -61,19 +61,44 @@
         android:inputType="text"
         android:hint="Item Name"/>
 
-    <Button
-        android:id="@+id/sign_up"
-        android:layout_width="50dp"
-        android:layout_height="35dp"
-        android:layout_gravity="bottom|right"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/login_button_style"
-        android:backgroundTint="@color/colorAccent"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="right"
+        android:layout_marginTop="10dp">
+        <Button
+            android:id="@+id/add"
+            android:layout_width="50dp"
+            android:layout_height="35dp"
+            android:layout_gravity="bottom|right"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/login_button_style"
+            android:backgroundTint="@color/colorAccent"
+            android:text="Add"
+            android:textAllCaps="true"
+            android:textStyle="bold"
+            android:textColor="#FDFDFE"
+            android:clickable="true"
+            android:layout_marginLeft="250dp"/>
 
-        android:text="Add"
-        android:textAllCaps="true"
-        android:textStyle="bold"
-        android:textColor="#FDFDFE"
-        android:clickable="true" />
+        <Button
+            android:id="@+id/done"
+            android:layout_width="50dp"
+            android:layout_height="35dp"
+            android:layout_gravity="bottom|right"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/login_button_style"
+            android:backgroundTint="@color/colorAccent"
+            android:layout_marginLeft="15dp"
+            android:text="Done"
+            android:textAllCaps="true"
+            android:textStyle="bold"
+            android:textColor="#FDFDFE"
+            android:clickable="true" />
+
+    </LinearLayout>
+
+
 
 </LinearLayout>
