--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -25,15 +25,13 @@
             android:adjustViewBounds="true" />
 
         <!--> App name <!-->
-        <TextView
-            android:id="@+id/app_name_2"
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="WANDER"
-            android:textColor="#c1272d"
-            android:textSize="30sp"
-            />
+            android:adjustViewBounds="true"
+            android:src="@drawable/title"
+            android:maxWidth="150dp"
+            android:layout_gravity="center"/>
 
         <!--> Email section <!-->
         <LinearLayout
