--- a/app/src/main/res/layout/activity_item_adder.xml
+++ b/app/src/main/res/layout/activity_item_adder.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="top|start"
         android:text="Add Item"
+        android:layout_marginLeft="10dp"
         android:textSize="30sp" />
 
     <LinearLayout
@@ -25,8 +26,8 @@
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/bubble_clothes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:elevation="6dp"
             app:backgroundTint="@color/colorAccent"
             app:pressedTranslationZ="12dp"
@@ -34,9 +35,9 @@
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/bubble_tech"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="100dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginLeft="65dp"
             android:elevation="6dp"
             app:backgroundTint="@color/colorAccent"
             app:pressedTranslationZ="12dp"
@@ -44,9 +45,9 @@
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/bubble_grocery"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="100dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginLeft="65dp"
             android:elevation="6dp"
             app:backgroundTint="@color/colorAccent"
             app:pressedTranslationZ="12dp"
@@ -57,20 +58,21 @@
         android:id="@+id/edit1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:inputType="text"
-        android:hint="Item Name"/>
+        android:hint="Item Name"
+        android:textSize="20dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_gravity="right"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="20dp">
         <Button
             android:id="@+id/add"
-            android:layout_width="50dp"
-            android:layout_height="35dp"
+            android:layout_width="100dp"
+            android:layout_height="45dp"
             android:layout_gravity="bottom|right"
             android:layout_marginTop="15dp"
             android:background="@drawable/login_button_style"
@@ -80,12 +82,12 @@
             android:textStyle="bold"
             android:textColor="#FDFDFE"
             android:clickable="true"
-            android:layout_marginLeft="250dp"/>
+            android:layout_marginLeft="160dp"/>
 
         <Button
             android:id="@+id/done"
-            android:layout_width="50dp"
-            android:layout_height="35dp"
+            android:layout_width="100dp"
+            android:layout_height="45dp"
             android:layout_gravity="bottom|right"
             android:layout_marginTop="15dp"
             android:background="@drawable/login_button_style"
