--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -40,7 +40,19 @@
         android:maxHeight="175dp"
         android:layout_marginTop="215dp"
         android:layout_marginLeft="100dp"
-        android:visibility="invisible"
+        android:visibility="visible"
         android:transitionName="app_logo"/>
+
+    <ImageView
+        android:id="@+id/slogan_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/slogan"
+        android:adjustViewBounds="true"
+        android:maxWidth="275dp"
+        android:layout_marginTop="410dp"
+        android:layout_marginLeft="70dp"/>
+
+
 
 </RelativeLayout>
