--- a/app/src/main/res/layout/page_fragment_layout.xml
+++ b/app/src/main/res/layout/page_fragment_layout.xml
@@ -8,6 +8,12 @@
     android:id="@+id/entire_fragment">
 
     <!-- TODO: Update blank fragment layout -->
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="com.example.jeffe.mapapplication.MapsActivity" />
 
     <TextView
         android:id="@+id/wish_list_title"
