--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -29,5 +29,13 @@
             android:text="Name"
             android:textSize="18sp" />
     </LinearLayout>
+    <TextView
+        android:id="@+id/store"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="25dp"
+        android:text="Name"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="5dp"/>
 
 </LinearLayout>
