--- a/app/src/main/res/layout/page_fragment_layout.xml
+++ b/app/src/main/res/layout/page_fragment_layout.xml
@@ -82,10 +82,17 @@
 
     <fragment
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:name="com.google.android.gms.maps.MapFragment"
-        android:id="@+id/fragment"
-        android:visibility="invisible"/>
+        android:layout_height="375dp"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:id="@+id/mapFragment"
+        android:visibility="visible"/>
+
+    <ListView
+        android:id="@+id/have"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/mapFragment"
+        android:visibility="invisible" />
 
 
 </RelativeLayout>
