--- a/app/src/main/res/layout/activity_item_adder.xml
+++ b/app/src/main/res/layout/activity_item_adder.xml
@@ -14,6 +14,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="top|start"
         android:text="Add Item"
+        android:fontFamily="@font/roboto_light"
+        android:textColor="@color/accentDark"
         android:layout_marginLeft="10dp"
         android:textSize="30sp" />
 
@@ -29,7 +31,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:elevation="6dp"
-            app:backgroundTint="@color/colorAccent"
+            app:backgroundTint="@color/colorPrimaryLight"
             app:pressedTranslationZ="12dp"
             android:visibility="visible" />
 
@@ -39,7 +41,7 @@
             android:layout_height="80dp"
             android:layout_marginLeft="65dp"
             android:elevation="6dp"
-            app:backgroundTint="@color/colorAccent"
+            app:backgroundTint="@color/colorPrimary"
             app:pressedTranslationZ="12dp"
             android:visibility="visible" />
 
@@ -49,7 +51,7 @@
             android:layout_height="80dp"
             android:layout_marginLeft="65dp"
             android:elevation="6dp"
-            app:backgroundTint="@color/colorAccent"
+            app:backgroundTint="@color/secondaryColorLight"
             app:pressedTranslationZ="12dp"
             android:visibility="visible" />
     </LinearLayout>
@@ -61,6 +63,7 @@
         android:layout_marginTop="10dp"
         android:inputType="text"
         android:hint="Item Name"
+        android:fontFamily="@font/roboto_light_italic"
         android:textSize="20dp"/>
 
     <LinearLayout
@@ -78,6 +81,7 @@
             android:background="@drawable/login_button_style"
             android:backgroundTint="@color/colorAccent"
             android:text="Add"
+            android:fontFamily="@font/roboto_bold_condensed"
             android:textAllCaps="true"
             android:textStyle="bold"
             android:textColor="#FDFDFE"
@@ -94,6 +98,7 @@
             android:backgroundTint="@color/colorAccent"
             android:layout_marginLeft="15dp"
             android:text="Done"
+            android:fontFamily="@font/roboto_bold_condensed"
             android:textAllCaps="true"
             android:textStyle="bold"
             android:textColor="#FDFDFE"
