--- a/app/src/main/res/layout/activity_item_adder.xml
+++ b/app/src/main/res/layout/activity_item_adder.xml
@@ -28,6 +28,7 @@
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/bubble_clothes"
+            android:src="@drawable/ic_action_tshirt"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:elevation="6dp"
@@ -37,6 +38,7 @@
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/bubble_tech"
+            android:src="@drawable/ic_action_chip"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginLeft="65dp"
@@ -47,6 +49,7 @@
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/bubble_grocery"
+            android:src="@drawable/ic_action_name"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginLeft="65dp"
